Fixed a bud and added a release feature